# fourier-cosine-option-pricing

./: README.md  conftest.py  pyfeng_demo.ipynb  pyproject.toml
docs/: paper_notes.md
examples/: bermudan_demo.py  dimensionless_surface.py  example_european_option.py  heston_cos_pricer.py  heston_dimensionless_surface.py  table10.py  table7.py  table8.py  table9.py  table_1.py  table_2.py  table_3.py  test4.py  test5.py  test6.py  validate_normal_cos.py
notebooks/: _build_tests_notebook.py  tests.ipynb
pyfeng/: README.md  sv_cos.py
src/cos_pricing/: __init__.py  bermudan.py  carr_madan.py  cgmy_model.py  cos_method.py  frft.py  heston_cos_pricer.py  lewis.py  models.py  utils.py  vg_model.py
tests/: __init__.py  test_bermudan.py  test_buckingham_pi.py  test_cos_method.py  test_dimensional_invariance.py  test_frft.py  test_heston_cos_pricer.py  test_heston_temporal_invariance.py  test_lewis.py  test_vg_model.py
